# app/Http/Requests/Auth/RegisterRequest.php
@@ -25,7 +25,6 @@ class RegisterRequest extends FormRequest
             'name' => 'required|string|max:255',
             'email' => 'required|string|email|max:255|unique:users',
             'password' => 'required|string|min:8|confirmed',
-            'marketing_code'=>'nullable|integer|unique:sales_person',
         ];
     }
 }
